# minimal_webgl2_crash

./: .gitignore  Cargo.toml  Makefile  index.html
src/: main.rs
