[package]
name = "minimal_webgl2_crash"
version = "0.2.0"
authors = ["Nikita Pekin <nikita@frecency.com>"]
#description = "A Dwarf Fortress/Rimworld-like game written in Rust"
#repository = "https://github.com/indiv0/colonize"
#readme = "README.md"
#keywords = [
#    "colonize",
#    "game",
#    "dwarf",
#    "fortress",
#    "rimworld",
#    "bevy"
#]
#license = "GPL-3.0-or-later"
#edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "4fecb899aaa33cf2ebc42ac94a32d4b5336c6e93", default-features = false }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", rev = "0500d2f3f7b8b4bc09706569fa6b125fc14dd52a", default-features = false }

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]
